---------------------------------------------------------------------------------------------------
Version: 4.1.22
Date: ????
  Bugfixes:
    - Fixed that filled (gas-) canisters used as recipe ingredients were not replaced with sluids
---------------------------------------------------------------------------------------------------
Version: 4.1.21
Date: 2022.05.01
  Bugfixes:
    - Fixed recipe amounts for low probabilities once again
    - Apply the recipe multiplier to catalyst_amount as well
---------------------------------------------------------------------------------------------------
Version: 4.1.20
Date: 2022.05.01
  Bugfixes:
    - Fixed a crash with mods that used decimals for fluid temperatures
---------------------------------------------------------------------------------------------------
Version: 4.1.19
Date: 2022.03.21
  Bugfixes:
    - Fixed that results with a low and odd probability could end up with an amount of 0
    - Fixed that the fluid output slot of furnaces was not replaced with a sluid one due to a typo
---------------------------------------------------------------------------------------------------
Version: 4.1.18
Date: 2022.03.01
  Bugfixes:
    - Fixed that results with a probability could end up with amount = 0
---------------------------------------------------------------------------------------------------
Version: 4.1.17
Date: 2022.02.27
  Changes:
    - Removed "player-creation" flag from hidden boilers so helmod and factory planner may exclude them
  Bugfixes:
    - Fixed a crash that could occur while loading saves with a pre-rewrite version of omnifluid
---------------------------------------------------------------------------------------------------
Version: 4.1.16
Date: 2022.02.11
  Features:
    - Added compat for angels electric boilers. They now have access to converter recipes without
      a temperature requirement
  Bugfixes: